VACMS-7032 fix tab contrast colors, fix delete button

--- a/docroot/themes/custom/vagovclaro/assets/scss/components/_buttons.scss
+++ b/docroot/themes/custom/vagovclaro/assets/scss/components/_buttons.scss
@@ -1,10 +1,10 @@
 .action-link--danger {
-  background-color: var(--color-error);
+  background-color: var(--color-maximumred-active);
   color: var(--color-white);
 }
 
 .action-link--danger:hover {
-  color: var(--color-error);
+  color: var(--color-maximumred-active);
 }
 
 // the "trash can" svg icon is inlined in claro's CSS with a hardcoded fill value, we are overriding the fill here
